--- a/style2.css
+++ b/style2.css
@@ -62,7 +62,7 @@ footer a:hover {
     margin-top: 2rem;
 }
 .container {
-    background-color: white;
+    background-color: none;
     padding-top: 2rem;
     padding-bottom: 3rem;
 }
