--- a/2 - Règles/style2.css
+++ b/2 - Règles/style2.css
@@ -1,6 +1,6 @@
 /* Surcharge les règles contenant un élément html */
 body {
-	background-image: url("background\ -\ Accueil.jpg");
+	background-image: url("../IMAGES/background\ -\ Accueil.jpg");
 	background-position: center center;
 	background-size: 100%;
 	background-repeat: repeat;
