--- a/4 - Lancer Tuto/style4.css
+++ b/4 - Lancer Tuto/style4.css
@@ -1,6 +1,6 @@
 /* Surcharge les règles contenant un élément html */
 body {
-	background-image: url("background\ -\ tuto.jpg");
+	background-image: url("../IMAGES/background\ -\ tuto.jpg");
 	background-position: center center;
 	background-size: 100%;
 	background-repeat: repeat;
@@ -62,7 +62,7 @@ footer a:hover {
     margin-top: 2rem;
 }
 .container {
-    background-color: white;
+    background-color: None;
     padding-top: 2rem;
     padding-bottom: 3rem;
 }
