--- a/style.css
+++ b/style.css
@@ -3,13 +3,11 @@ body {
 	background-image: url("IMAGES/background\ -\ Accueil.jpg");
 	background-position: center center;
 	background-size: 100%;
-	background-repeat: repeat;
+	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
 
-
 h1 {
-	
 	color:white;
     font-weight: 5000;
     margin-bottom: 2rem;
@@ -24,10 +22,7 @@ h2 {
 li {
 	color: rgb(60,60,60);
 }
-btn {
-    border-color: white;
-    border-width: 2px,2px
-}
+
 /* Surcharge les grands blocs */
 .main-content {
     background-color: #FAF9F8;
@@ -62,11 +57,9 @@ footer a:hover {
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 8px 6px -6px #999;
 }
-.btn-block {
-    margin-top: 2rem;
-}
+
 .container {
-    background-color: white;
+    background-color: None;
     padding-top: 2rem;
     padding-bottom: 3rem;
 }
