--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ footer a:hover {
     -webkit-box-shadow: 0 8px 6px -6px #999;
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 8px 6px -6px #999;
+    background-color: black;
 }
 
 .container {
