--- a/2 - Règles/style2.css
+++ b/2 - Règles/style2.css
@@ -3,7 +3,7 @@ body {
 	background-image: url("../IMAGES/background\ -\ Accueil.jpg");
 	background-position: center center;
 	background-size: 100%;
-	background-repeat: repeat;
+	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
 
@@ -57,7 +57,9 @@ footer a:hover {
     -webkit-box-shadow: 0 8px 6px -6px #999;
     -moz-box-shadow: 0 8px 6px -6px #999;
     box-shadow: 0 8px 6px -6px #999;
+    background-color: black;
 }
+
 .btn-block {
     margin-top: 2rem;
 }
