--- a/5 - Conception/style_conception.css
+++ b/5 - Conception/style_conception.css
@@ -95,7 +95,6 @@ body {
 .box {
     width: 350px;
     height: 400px;
-    background-color: rgb(31, 31, 31);
     position: relative;
 }
 
@@ -104,13 +103,13 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  background: linear-gradient(45deg, #ff0000, #00f0f0, #00ff00, #0000ff, #ff0000, #00f0f0, #00ff00, #0000ff, #f00f0f);
+  background: linear-gradient(45deg, orange, rgb(34, 247, 247), rgb(23, 245, 23), rgb(34, 247, 247), orange);
   width: 100%;
   height: 100%;
   transform: scale(1.02);
   z-index: -1;
   background-size: 500%;
-  animation: animate 20s infinite;
+  animation: animate 50s infinite;
 }
 
 .box::after {
@@ -128,7 +127,7 @@ body {
 /* -------------------------------------------------------------------------------------------------------------------------------------- */
 
 a button {
-    color: darkred;
+    color: white;
     font-family: Arial, sans-serif;
     background: black;
     height: 50px;
@@ -136,7 +135,7 @@ a button {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid white;
+    border: 1px solid darkred;
     overflow: hidden;
     font-size: 1em;
     font-weight: 400;
@@ -151,7 +150,7 @@ a button::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: cyan;
+    background: darkred;
     border-radius: 50% 50% 0 0;
     transition: all .5s;
     z-index: -1;
