--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Surcharge les règles contenant un élément html */
 body {
 	background-image: url("IMAGES/background\ -\ Accueil.jpg");
 	background-position: center center;
@@ -17,39 +16,6 @@ h2 {
     margin-bottom: 2rem;
 }
 
-li {
-	color: rgb(60,60,60);
-}
-
-/* Surcharge les grands blocs */
-.main-content {
-    background-color: #FAF9F8;
-}
-.information {
-    margin-bottom: 1.5rem;
-}
-.resultat {
-    background-color: aliceblue;
-    margin-top: 2rem;
-    padding: 1rem;
-}
-.resultat h3 {
-    margin: 2rem auto;
-}
-.resultat h3:first-child{
-    margin-top: 0;
-}
-footer .container {
-    background-color: inherit;
-}
-footer a, footer a:hover {
-    color: white;
-}
-footer a:hover {
-    text-decoration: underline;
-}
-
-/* Surcharge des éléments Bootstrap */
 .navbar {
     -webkit-box-shadow: 0 8px 6px -6px #999;
     -moz-box-shadow: 0 8px 6px -6px #999;
@@ -61,4 +27,37 @@ footer a:hover {
     background-color: None;
     padding-top: 2rem;
     padding-bottom: 3rem;
+}
+
+@media screen and (max-width: 480px){
+    body {
+        background-image: url("IMAGES/background\ -\ Accueil.jpg");
+        background-position: center;
+        background-size: 420%;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
+    
+    h1 {
+        font-weight: 5000;
+        margin-bottom: 2rem;
+    }
+    
+    h2 {
+        font-weight: 5000;
+        margin-bottom: 2rem;
+    }
+    
+    .navbar {
+        -webkit-box-shadow: 0 8px 6px -6px #999;
+        -moz-box-shadow: 0 8px 6px -6px #999;
+        box-shadow: 0 8px 6px -6px #999;
+        background-color: black;
+    }
+    
+    .container {
+        background-color: None;
+        padding-top: 2rem;
+        padding-bottom: 3rem;
+    }
 }
